# xcli

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  setup.py
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
examples/: CMakeLists.txt  foo_ex.cc
examples/cli/: arg_capture.cc  array_option.cc  callback_passthrough.cc  close_match.cc  config_app.cc  custom_parse.cc  custom_validator.cc  date_validator.cc  digit_args.cc  enum.cc  enum_ostream.cc  error_demo.cc  formatter.cc  groups.cc  help_usage.cc  inter_argument_order.cc  json.cc  minimal.cc  modhelp.cc  nested.cc  option_groups.cc  positional_arity.cc  positional_validation.cc  ranges.cc  (+10 more)
tests/: CMakeLists.txt  foo_doctest.cc  foo_test.cc
tests/cli/: app_helper.hpp  app_test.cc  boost_option_type_test.cc  catch.hpp  complex_type_test.cc  config_file_test.cc  creation_test.cc  encoding_test.cc  ensure_utf8.cpp  ensure_utf8_twice.cpp  extra_validators_test.cc  flags_declare_flags.cc  flags_declare_test.cc  flags_test.cc  formatter_test.cc  fuzz_fail_test.cc  help_test.cc  helpers_test.cc  informational.cc  link_test_1.cc  link_test_2.cc  locale_test.cc  new_parse_test.cc  numeric_type_test.cc  option_group_test.cc  option_type_test.cc  optional_test.cc  set_test.cc  simple_test.cc  subcommand_test.cc  timer_test.cc  transform_test.cc
xcli/: CMakeLists.txt  app.h  argv.h  cli.h  config.h  config_fwd.h  encoding.h  error.h  extra_validators.h  flags.h  foo.cc  formatter.h  formatter_fwd.h  macros.h  main.cc  option.h  skills.h  split.h  string_tools.h  timer.h  type_tools.h  validators.h
(+36 files in other folders)
